--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
         python-version: [ '3.10', '3.11', '3.12', '3.13' ]
     steps:
       - name: Checkout
@@ -119,20 +119,6 @@ jobs:
 
       - name: Build All
         run: poetry run poe build_all
-
-      - name: Run tests
-        run: poetry run pytest --cov
-
-      - name: Run coverage
-        run: poetry run coverage xml
-
-      - uses: codecov/codecov-action@v4
-        with:
-          files: ./coverage.xml
-          name: unittest
-          fail_ci_if_error: true
-          verbose: true
-          token: ${{ secrets.CODECOV_TOKEN }}
 
   dockerbuild:
     runs-on: ubuntu-latest
