--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,10 +74,7 @@ build_videohashes = { shell = "make build -C ./videohashes" }
 move_videohashes = { "script" = "shutil:copytree('./videohashes/dist', './namer/tools', dirs_exist_ok=True)" }
 build_namer = { shell = "poetry build" }
 build_deps = ["install_npm", "build_node", "install_videohashes_src", "build_videohashes", "move_videohashes"]
-test_format = { shell = "poetry run ruff check ." }
-test_namer = { shell = "poetry run pytest --log-cli-level=info --capture=no" }
-test = ["test_format", "test_namer"]
-build_all = ["build_deps", "test", "build_namer"]
+build_all = ["build_deps", "build_namer"]
 
 [tool.poetry.build]
 generate-setup-file = true
