--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -271,7 +271,7 @@ jobs:
         run: |
           export BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
           export GIT_HASH=$(git rev-parse --verify HEAD)
-          export repo=theporndatabase
+          export repo=h4jimeyo
           export version=$( echo "${{ needs.auto-tag.outputs.created-tag }}" | grep -e '[0-9.]*')
           docker build . --build-arg "BUILD_DATE=${BUILD_DATE}" --build-arg "GIT_HASH=${GIT_HASH}" --build-arg "PROJECT_VERSION=${version}" -t "ghcr.io/${repo}/namer:${version}" -t "ghcr.io/${repo}/namer:latest"
           docker push "ghcr.io/${repo}/namer:${version}"
